--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Directory App</string>
     <string name="people_title">People list</string>
     <string name="room_title">Rooms list</string>
+    <string name="person_name">%1$s %2$s</string>
 </resources>
