--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="people_title">People list</string>
     <string name="room_title">Rooms list</string>
     <string name="person_name">%1$s %2$s</string>
+    <string name="menu_refresh">Refresh</string>
 </resources>
