--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="error_generic_title">An error has occurred</string>
     <string name="error_generic_subtitle">Please check your connection or contact support</string>
     <string name="error_old_data">This is older data due to connection issues.\n Please swipe to refresh.</string>
+    <string name="see_on_map">See on map</string>
 </resources>
