--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="error_generic_subtitle">Please check your connection or contact support</string>
     <string name="error_old_data">This is older data due to connection issues.\n Please swipe to refresh.</string>
     <string name="see_on_map">See on map</string>
+    <string name="max_occcupancy"><![CDATA[Max Occupancy: <b>%d</b>]]></string>
+    <string name="available">Available</string>
+    <string name="busy">Busy</string>
+    <string name="contact_details">Contact details</string>
 </resources>
